prevent body text selection from being visible

--- a/app/assets/style/app.scss
+++ b/app/assets/style/app.scss
@@ -36,6 +36,7 @@ body {
   padding:0;
   margin:0;
   -webkit-overflow-scrolling: touch;
+  -webkit-user-select:none;
 }
 
 #react-root,
